--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-pip
-Django==3.2.2
-amqp==5.0.6
-vine==5.0.0
-pillow==8.2.0
-pytz==2021.1
-sqlparse==0.4.1
-celery==5.0.5
-django-celery-beat==2.2.0
-psycopg2-binary==2.8.6
-whitenoise
-oryx
-gunicorn
+pip>=21.1.2
+Django>=3.2.4
+amqp>=5.0.6
+vine>=5.0.0
+pillow>=8.2.0
+pytz>=2021.1
+sqlparse>=0.4.1
+celery>=5.1.0
+django-celery-beat>=2.2.0
+psycopg2-binary>=2.8.6
+whitenoise>=5.2.0
+oryx>=0.0.0
+gunicorn>=20.1.0
