--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-pip>=21.1.2
-Django>=3.2.4
-amqp>=5.0.6
-vine>=5.0.0
-pillow>=8.2.0
-pytz>=2021.1
-sqlparse>=0.4.1
-celery>=5.1.0
-django-celery-beat>=2.2.0
-psycopg2-binary>=2.8.6
-whitenoise>=5.2.0
-gunicorn>=20.1.0
+amqp==5.0.6
+asgiref==3.3.4
+billiard==3.6.4.0
+celery==5.1.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+Django==3.2.4
+django-celery-beat==2.2.0
+django-timezone-field==4.1.2
+gunicorn==20.1.0
+kombu==5.1.0
+Pillow==8.2.0
+prompt-toolkit==3.0.18
+psycopg2-binary==2.8.6
+python-crontab==2.5.1
+python-dateutil==2.8.1
+pytz==2021.1
+six==1.16.0
+sqlparse==0.4.1
+vine==5.0.0
+wcwidth==0.2.5
+whitenoise==5.2.0
